deployments/pgadmin/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      nodeSelector:
        role: ui
      containers:
        - name: pgadmin
          image: 'dpage/pgadmin4:latest'
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
          # env:
          #   - name: PGADMIN_DEFAULT_EMAIL
          #     value: 'heiko.vogeler@hvo.de'
          #   - name: PGADMIN_DEFAULT_PASSWORD
          #     value: 'admin'
          #   - name: PGADMIN_LISTEN_PORT
          #     value: '5050'
          #   - name: PGADMIN_CONFIG_LOGIN_BANNER
          #     value: '"Ein Werwolf eines nachts entwich"'
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin-data
              readOnly: false
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-volume-claim
