deployments/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  # loadBalancerIP: 192.168.178.210
  ports:
    - protocol: TCP
      # the port published on the k8s network
      port: 80
      # the port published by the container
      targetPort: 5050
  selector:
    app: pgadmin
