deployments/pgadmin/pgadmin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ui-local
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pgadmin.hvo.lan`)
      kind: Rule
      # middlewares:
      #   - name: strip-traefik
      services:
        - name: pgadmin-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ui-web
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pgadmin.vogeler.cc`)
      kind: Rule
      # middlewares:
      #   - name: strip-traefik
      services:
        - name: pgadmin-service
          port: 80
  tls:
    secretName: pgadmin-certificate-secret
